# AI-Resume-Job-Match-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI-Resume-Job-Match-Agent-threat-model.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260713_0001_initial_schema.py
docs/: api.md  architecture.md  evaluation.md  scoring.md
docs/adr/: 0001-modular-monolith-clean-architecture.md  0002-deterministic-scoring.md  0003-direct-openai-sdk.md  0004-persistence-and-storage.md  0005-synchronous-mvp.md
evaluations/: __init__.py  benchmark.py  runner.py
evaluations/baselines/: local-v1.md
evaluations/fixtures/: README.md  synthetic-v1.json
scripts/: docker_smoke.py
src/resume_matcher/: __init__.py  app.py  container.py  main.py
src/resume_matcher/application/: __init__.py  dto.py  ports.py
src/resume_matcher/application/services/: __init__.py  job_service.py  match_service.py  resume_service.py
src/resume_matcher/config/: __init__.py  settings.py
src/resume_matcher/domain/: __init__.py  entities.py  exceptions.py  fact_guard.py  matching.py  recommendations.py  skill_normalizer.py
src/resume_matcher/infrastructure/: __init__.py  logging.py  rate_limit.py  storage.py
src/resume_matcher/infrastructure/ai/: __init__.py  contracts.py  local.py  mappers.py  openai_adapter.py  prompts.py
src/resume_matcher/infrastructure/export/: __init__.py  resume_exporter.py
src/resume_matcher/infrastructure/parsing/: __init__.py  document_parser.py
src/resume_matcher/infrastructure/persistence/: database.py  models.py  repositories.py  serialization.py
src/resume_matcher/presentation/api/: __init__.py  dependencies.py  errors.py  mappers.py  middleware.py  schemas.py
src/resume_matcher/presentation/api/routers/: health.py  jobs.py  matches.py  resumes.py
tests/: __init__.py  conftest.py
tests/contract/: test_openapi.py
tests/e2e/: test_api_workflow.py
tests/evaluations/: test_benchmark.py
tests/integration/: test_api_errors_and_security.py  test_database_readiness.py
tests/unit/: conftest.py  test_application_services.py  test_document_parser.py  test_exporter.py  test_fact_guard.py  test_local_ai.py  test_logging.py  test_matching.py  test_openai_adapter.py  test_rate_limit.py  test_recommendations.py  test_serialization.py  test_settings.py  test_skill_normalizer.py  test_storage.py
