[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[project]
name = "ai-resume-job-match-agent"
version = "0.1.0"
description = "Explainable AI-assisted resume and job-description matching API"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Miguel Angel Sierra Hayer" }]
keywords = ["fastapi", "openai", "resume", "job-matching", "clean-architecture"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "aiosqlite>=0.21,<1",
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.128,<1",
  "openai>=2.15,<3",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.10,<3",
  "pymupdf>=1.26,<2",
  "python-docx>=1.2,<2",
  "python-multipart>=0.0.20,<1",
  "reportlab>=5.0.0,<6",
  "sqlalchemy[asyncio]>=2.0.51,<3",
  "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=2.3.0,<3",
  "pip-audit>=2.9,<3",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.0,<2",
  "pytest-cov>=6.2,<8",
  "pypdf>=6.0,<7",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/Miguesh/AI-Resume-Job-Match-Agent"
Repository = "https://github.com/Miguesh/AI-Resume-Job-Match-Agent"
Issues = "https://github.com/Miguesh/AI-Resume-Job-Match-Agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_matcher"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "evaluations", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S108"]
"alembic/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["resume_matcher"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["fitz", "reportlab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests multiple infrastructure components together",
  "external: requires external services or credentials",
]

[tool.coverage.run]
branch = true
source = ["resume_matcher"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
